include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = seahorse
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/generate.png \
	figures/key-properties.png \
	figures/recipients.png \
	figures/export.png \
	figures/import.png \
	figures/passphrase.png \
	figures/signature.png \
	figures/file-manager.png \
	figures/key-manager.png \
	figures/preferences.png \
	figures/text-editor.png \
	figures/seahorse-window.png

DOC_LINGUAS = de en_GB es fr it oc ru sv vi
