@YELP_HELP_RULES@

HELP_ID = seahorse

HELP_FILES = \
	glossary.page \
	index.page \
	introduction.page \
	key-servers-add.page \
	keyring-change-default.page \
	keyring-create.page \
	keyring-lock.page \
	keyring-unlock.page \
	keyring-update-password.page \
	keyring.page \
	legal.xml \
	misc-key-backup.page \
	misc-key-fingerprint.page \
	passwords-stored-create.page \
	passwords-view.page \
	passwords.page \
	pgp-create.page \
	pgp-delete.page \
	pgp-expiration-change.page \
	pgp-expired.page \
	pgp-export.page \
	pgp-import.page \
	pgp-photoid.page \
	pgp-publish.page \
	pgp-retrieve-remote.page \
	pgp-sign.page \
	pgp-subkeys.page \
	pgp-sync.page \
	pgp-userid-add.page \
	pgp-userid-primary.page \
	pgp-userid-remove.page \
	pgp-userid.page \
	pgp.page \
	ssh-connect-remote.page \
	ssh-create-vs-setup.page \
	ssh-create.page \
	ssh-export.page \
	ssh-import.page \
	ssh.page \
	subkeys-add.page \
	subkeys-examine.page \
	subkeys-revoke.page

HELP_MEDIA = 

HELP_LINGUAS = ca cs de el en_GB es eu fr gl it ja ko oc pt_BR ru sl sv vi zh_CN
