help_pages = [
  'about-diff-private-public.page',
  'about-pgp.page',
  'about-ssh.page',
  'concepts.page',
  'glossary.page',
  'index.page',
  'introduction.page',
  'key-servers-add.page',
  'keyring-change-default.page',
  'keyring-create.page',
  'keyring-lock.page',
  'keyring-unlock.page',
  'keyring-update-password.page',
  'keyring.page',
  'legal.xml',
  'misc-key-backup.page',
  'misc-key-fingerprint.page',
  'passwords-stored-create.page',
  'passwords-view.page',
  'pgp-create.page',
  'pgp-delete.page',
  'pgp-expiration-change.page',
  'pgp-expired.page',
  'pgp-export.page',
  'pgp-import.page',
  'pgp-photoid.page',
  'pgp-publish.page',
  'pgp-retrieve-remote.page',
  'pgp-sign.page',
  'pgp-subkeys.page',
  'pgp-sync.page',
  'pgp-userid-add.page',
  'pgp-userid-primary.page',
  'pgp-userid-remove.page',
  'pgp-userid.page',
  'ssh-connect-remote.page',
  'ssh-create.page',
  'ssh-export.page',
  'ssh-import.page',
  'subkeys-add.page',
  'subkeys-examine.page',
  'subkeys-revoke.page',
]

help_media = [
  'media/dialog-password-symbolic.svg',
  'media/org.gnome.Seahorse.svg',
]

gnome.yelp(meson.project_name(),
  sources: help_pages,
  media: help_media,
)
